# vllm-scheduler-policies

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: phase12_4b_implementation_map.md  phase_12_report.md  primal_lp_relaxation_latex_to_code_mapping.md  primal_lp_relaxation_phase11_notes.md  primal_lp_relaxation_scheduler.md  project_status.md  scheduler_experiment_reference.md  scheduler_experiment_reference_phase_9_report.md
docs/archive/: README.md  phase12_1_verified_vllm_mapping.md  phase14_timing_attribution_summary.md  scheduler_experiment_reference_phase_9_report.md  vllm_unity_experiment_plan_phase_1_to_11.md
experiments/: README.md
experiments/common/: analyze_scheduler_jsonl.py  env.sh  make_record.py  run_lib.sh  summarize_matrix.py
experiments/lp_dry_run_overhead/: README.md
experiments/lp_dry_run_overhead/configs/: qwen3_0_6b_5seed_matrix.env  qwen3_0_6b_small_matrix.env  qwen3_0_6b_tiny.env
experiments/lp_dry_run_overhead/scripts/: analyze_run.sh  make_record.sh  run_matrix.sh  run_one_workload.sh  sanity_check.sh  start_server.sh  stop_server.sh
experiments/lp_dry_run_overhead/summaries/: 20260524_5seed_tpot_matrix.md  (+3 more)
scripts/: bench.sh  scheduler_lib.sh  serve.sh  unity_cuda_13_1_env.sh
tests/: test_primal_lp_dry_run.py  test_primal_lp_extraction.py  test_primal_lp_solver.py
vllm_scheduler_policies/: __init__.py  baseline.py  common.py  instrumentation.py  primal_lp_dry_run.py  simple_policy_1.py
vllm_scheduler_policies/primal_lp/: __init__.py  extraction.py  solver.py  types.py  weights.py
